src/objects/Part_Request__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Part_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>概要</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>配送リクエスト</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>配送リクエストNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>